--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
       </div>
 
       <menu>
-        <button>Carros</button>
-        <button>Caminhonetes</button>
-        <button>Outros Veículos</button>
-        <button>Contato</button>
+        <div class="firstRowMenu">
+          <button>Carros</button>
+          <button>Caminhonetes</button>
+        </div>
+        <div class="secondRowMenu">
+          <button>Outros Veículos</button>
+          <button>Contato</button>
+        </div>
       </menu>
     </header>
 
